peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/Referral_Funding_Source__c.object-meta.xml
<CustomObject>
    <description>Funding Source for referral opportunities</description>
    <label>Referral Funding Source</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Funding Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Funding Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>