peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referral Funding Sources</relationshipLabel>
    <relationshipName>Referral_Funding_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>