peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/fields/Referral_Date_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Date Expiration</label>
    <type>Date</type>
</CustomField>