peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/fields/Referral_Decision__c.field-meta.xml
<CustomField>
    <fullName>Referral_Decision__c</fullName>
    <label>Referral Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>More Info</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>