peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <label>Referral Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Referral_Partners</valueSetName>
    </valueSet>
</CustomField>