peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/fields/Selected_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Selected_Funding_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Funding Source</label>
    <type>Checkbox</type>
</CustomField>