peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/validationRules/Check_Referral_Date_Decisioned.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Referral_Date_Decisioned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(TEXT(Referral_Decision__c))), 
  ISBLANK( Referral_Date_Decisioned__c))</errorConditionFormula>
    <errorDisplayField>Referral_Date_Decisioned__c</errorDisplayField>
    <errorMessage>When a Referral Decision is selected, a decision date is required.</errorMessage>
</ValidationRule>