peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/validationRules/Check_Referral_Date_Expiration.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Referral_Date_Expiration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Referral_Decision__c, &quot;Approved&quot; ),
  ISBLANK( Referral_Date_Expiration__c )
)</errorConditionFormula>
    <errorDisplayField>Referral_Date_Expiration__c</errorDisplayField>
    <errorMessage>You must select an expiration date if the Referral Decision is &quot;Approved&quot;</errorMessage>
</ValidationRule>