peac_dev/force-app/main/default/objects/Referral_Funding_Source__c/validationRules/Check_Referral_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Referral_Partner</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  NOT(ISBLANK( Date_Submitted__c )),
  ISBLANK( TEXT(Referral_Partner__c) )
)</errorConditionFormula>
    <errorDisplayField>Referral_Partner__c</errorDisplayField>
    <errorMessage>You must select a Partner when submitted.</errorMessage>
</ValidationRule>